# cgm-llm-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  cleanup-runs.yml
data/: example.csv
notebooks/: test_read_raw_data.py
src/cgm_llm_assistant/: __init__.py  aggregates.py  cli_demo.py  constants.py  context.py  llm.py  metrics.py  processing.py
src/cgm_llm_assistant/llm/: __init__.py  ollama.py
src/cgm_llm_assistant/metrics/: __init__.py  metrics.py  summary.py
src/cgm_llm_assistant/ui/: __init__.py  app.py
tests/: test_aggregates.py  test_context.py  test_metrics.py  test_processing.py
