[project]
name = "cgm-llm-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "duckdb>=1.5.0",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "ipython>=9.11.0",
    "ruff>=0.15.5",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cgm_llm_assistant*"]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q -vv"

[project.scripts]
cgm-assistant = "cgm_llm_assistant.cli_demo:main"
